@@ -4,7 +4,9 @@ import static org.uniprot.store.search.field.validator.FieldRegexConstants.UNIPA
 import static org.uniprot.store.search.field.validator.FieldRegexConstants.UNIPROTKB_ACCESSION_SEQUENCE_RANGE_REGEX;
 
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author sahmad
@@ -26,7 +28,7 @@ public interface IdsSearchRequest extends SearchRequest {
     }
 
     default List<String> getIdList() {
-        return Arrays.stream(getCommaSeparatedIds().split(","))
+        return new LinkedList<>(Arrays.stream(getCommaSeparatedIds().split(","))
                 .map(String::strip)
                 .map(String::toUpperCase)
                 .map(
@@ -39,6 +41,6 @@ public interface IdsSearchRequest extends SearchRequest {
                                                         .matches()
                                         ? sanitisedId.substring(0, sanitisedId.indexOf("["))
                                         : sanitisedId)
-                .toList();
+                .collect(Collectors.toList()));
     }
 }
